[NAE-2417] Fix dependency vulnerabilities
- add more tests...