@@ -2,89 +2,66 @@ package com.netgrif.application.engine.elastic.web.requestbodies;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 class CaseSearchRequestTest {
 
     @Test
-    void mapConstructorPopulatesSupportedFiltersAndSanitizesFullText() {
-        Map<String, Object> request = new HashMap<>();
-        request.put("process", List.of("invoice"));
-        request.put("processIdentifier", List.of("legacy-invoice"));
-        request.put("author", List.of(Map.of(
-                "id", "user-1",
-                "name", "Test User",
-                "username", "tester",
-                "realm", "default"
-        )));
-        request.put("data", Map.of("priority", "high"));
-        request.put("fullText", "title:test");
-        request.put("transition", List.of("approve"));
-        request.put("role", List.of("manager"));
-        request.put("query", "status:open");
-        request.put("stringId", List.of("case-1"));
-        request.put("group", List.of("group-1"));
+    void createsRequestFromLegacyMapAndSanitizesFullText() {
+        CaseSearchRequest request = new CaseSearchRequest(Map.of(
+                "process", List.of("invoice"),
+                "processIdentifier", List.of("legacy"),
+                "author", List.of(Map.of("id", "user-1", "name", "John", "username", "john", "realm", "default")),
+                "data", Map.of("status", "open"),
+                "fullText", "invoice:title",
+                "transition", List.of("approve"),
+                "role", List.of("manager"),
+                "query", "status:open",
+                "stringId", List.of("case-1"),
+                "group", List.of("group-1")
+        ));
 
-        CaseSearchRequest parsed = new CaseSearchRequest(request);
-
-        assertEquals("invoice", parsed.process.get(0).identifier);
-        assertEquals(List.of("legacy-invoice"), parsed.processIdentifier);
-        assertEquals("user-1", parsed.author.get(0).id);
-        assertEquals("Test User", parsed.author.get(0).name);
-        assertEquals("tester", parsed.author.get(0).username);
-        assertEquals("default", parsed.author.get(0).realm);
-        assertEquals(Map.of("priority", "high"), parsed.data);
-        assertEquals("title\\:test", parsed.fullText);
-        assertEquals(List.of("approve"), parsed.transition);
-        assertEquals(List.of("manager"), parsed.role);
-        assertEquals("status:open", parsed.query);
-        assertEquals(List.of("case-1"), parsed.stringId);
-        assertEquals(List.of("group-1"), parsed.group);
+        assertEquals("invoice", request.process.getFirst().identifier);
+        assertEquals(List.of("legacy"), request.processIdentifier);
+        assertEquals("user-1", request.author.getFirst().id);
+        assertEquals("John", request.author.getFirst().name);
+        assertEquals("john", request.author.getFirst().username);
+        assertEquals("default", request.author.getFirst().realm);
+        assertEquals(Map.of("status", "open"), request.data);
+        assertEquals("invoice\\:title", request.fullText);
+        assertEquals(List.of("approve"), request.transition);
+        assertEquals(List.of("manager"), request.role);
+        assertEquals("status:open", request.query);
+        assertEquals(List.of("case-1"), request.stringId);
+        assertEquals(List.of("group-1"), request.group);
     }
 
     @Test
-    void mapConstructorAllowsPartialAuthorFilter() {
-        Map<String, Object> request = Map.of("author", List.of(Map.of("username", "tester")));
-
-        CaseSearchRequest parsed = new CaseSearchRequest(request);
-
-        assertNull(parsed.author.get(0).id);
-        assertNull(parsed.author.get(0).name);
-        assertEquals("tester", parsed.author.get(0).username);
-        assertNull(parsed.author.get(0).realm);
-    }
-
-    @Test
-    void mapConstructorRejectsEmptyAuthorFilter() {
-        Map<String, Object> request = Map.of("author", List.of(Map.of()));
-
+    void rejectsAuthorFilterWithoutSupportedAttributes() {
         IllegalArgumentException exception = assertThrows(
                 IllegalArgumentException.class,
-                () -> new CaseSearchRequest(request)
+                () -> new CaseSearchRequest(Map.of("author", List.of(Map.of("unsupported", "value"))))
         );
 
         assertEquals("Author filter must contain at least one of: id, name, username, realm", exception.getMessage());
     }
 
     @Test
-    void mapConstructorIgnoresValuesWithUnexpectedTypes() {
-        Map<String, Object> request = new HashMap<>();
-        request.put("process", "invoice");
-        request.put("author", Map.of("username", "tester"));
-        request.put("data", List.of("priority"));
-        request.put("fullText", List.of("title:test"));
+    void ignoresValuesWithUnexpectedTypes() {
+        CaseSearchRequest request = new CaseSearchRequest(Map.of(
+                "process", "invoice",
+                "author", Map.of("id", "user-1"),
+                "fullText", List.of("bad"),
+                "query", 42
+        ));
 
-        CaseSearchRequest parsed = new CaseSearchRequest(request);
-
-        assertNull(parsed.process);
-        assertNull(parsed.author);
-        assertNull(parsed.data);
-        assertNull(parsed.fullText);
+        assertEquals(null, request.process);
+        assertEquals(null, request.author);
+        assertEquals(null, request.fullText);
+        assertEquals(null, request.query);
     }
 }
